# HTTPserver

./: .gitignore  CMakeLists.txt
src/: dbTypes.cpp  dbTypes.hpp  main.cpp  resourceTypes.cpp  resourceTypes.hpp  response.hpp
src/methods/: methods.hpp
